--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -4,7 +4,7 @@
 //variables
 $black: #000;
 $white: #ffffff;
-$grey: #4f4f4f;
+$grey: #656565;
 
 //resets
 *, *::after, *::before
@@ -20,3 +20,110 @@ body
 // actual styling
 body
     background: $black
+header
+    text-align: right
+    padding: 1rem 3rem
+    #gameLink
+        position: relative
+        text-decoration: none
+        color: $white
+        font-size: 1.5rem
+        font-weight: 700
+        -webkit-tap-highlight-color: transparent
+        &::after
+            content: '>'
+            position: absolute
+            margin-left: .5rem
+            transition: all 200ms ease-out
+        &:hover
+            text-decoration: underline
+            &::after
+                color: $grey
+                transform: translateX(.8rem)
+
+main
+    .upper-section
+        position: relative
+        width: 100%
+        height: 100vh
+        overflow: hidden
+        // background: url('../images/background.jpg')
+        // background-repeat: no-repeat
+        // background-position: center
+        // background-size: 100%
+        &::before
+            content: ' '
+            position: absolute
+            top: 0
+            width: 100%
+            height: 50px
+            background: linear-gradient(to bottom, $black, transparent) 
+        &::after
+            content: ' '
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 100%
+            height: 200px
+            background: linear-gradient(to top, $black, transparent) 
+
+        #background
+            width: 100%
+            height: 100%
+        #skull
+            position: absolute
+            width: 70%
+            max-width: 400px
+            top: 40%
+            left: 50%
+            transform: translate(-50%, -50%)
+    .content-section
+        position: relative
+        height: 2000px
+        width: 100%
+        &::before
+            content: ''
+            position: absolute
+            left: 50%
+            top: 4rem
+            height: 100%
+            width: .75rem
+            background: $white
+            border-radius: 1rem
+
+footer
+    display: flex
+    flex-direction: column
+    margin-top: 6rem
+    text-align: center
+    color: white
+    padding: 1rem
+    font-size: 1.15rem
+    font-weight: 300
+    gap: 2rem
+    a
+        font-weight: 700
+        color: $grey
+        text-decoration: none
+    ul
+        list-style: none
+        li:first-of-type
+            font-weight: 700
+
+@media screen and ( min-width:800px )
+    body
+        main
+            .upper-section
+                #skull
+                    width: 50%
+                    max-width: 500px
+            .content-section
+                &::before
+                    top: 8rem
+        footer
+            margin-top: 12rem
+            flex-direction: row
+            justify-content: space-evenly
+            align-items: center
+
+                
