--- a/assets/styles/game.css
+++ b/assets/styles/game.css
@@ -13,7 +13,244 @@ body {
           box-sizing: border-box;
 }
 
+.display-block {
+  display: block !important;
+}
+
 body {
-  background: #000;
+  background: #ffffff;
+  overflow: hidden;
+}
+
+.backdrop {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 999;
+}
+
+.shopUI {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 70%;
+  height: 70vh;
+  max-width: 600px;
+  background: #ffffff;
+  z-index: 1001;
+  border-radius: 1rem;
+}
+
+.shopUI h2 {
+  text-align: center;
+  padding: .5rem 0;
+  font-size: 2rem;
+}
+
+.statsUI {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 70%;
+  height: 70vh;
+  max-width: 600px;
+  background: #ffffff;
+  z-index: 1001;
+  border-radius: 1rem;
+}
+
+.statsUI h2 {
+  text-align: center;
+  padding: .5rem 0;
+  font-size: 2rem;
+}
+
+.content-game {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+
+.upper-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem 2rem;
+  background: #c24502;
+}
+
+.upper-section .upper-section__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+}
+
+.upper-section .upper-section__left .currency {
+  font-weight: 700;
+  font-size: 2rem;
+  color: #00d000;
+}
+
+.upper-section .upper-section__left .currency .money {
+  font-size: 1.75rem;
+}
+
+.upper-section .upper-section__left .fame {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.upper-section .upper-section__left .fame::before {
+  content: 'Fame: ';
+  font-size: 2rem;
+}
+
+.upper-section .upper-section__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+}
+
+.upper-section .upper-section__right .concert {
+  font-weight: 700;
+  padding: .5rem 2rem;
+  background: #4f4f4f;
+  color: #cfcfcf;
+  cursor: not-allowed;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border-radius: .5rem;
+}
+
+.upper-section .upper-section__right .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+}
+
+.upper-section .upper-section__right .buttons button {
+  font-weight: 700;
+  padding: .5rem 1rem;
+  color: #ffffff;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
+.upper-section .upper-section__right .buttons button:focus {
+  outline: none;
+}
+
+.upper-section .upper-section__right .buttons #shop-button {
+  background: #005000;
+}
+
+.upper-section .upper-section__right .buttons #stats-button {
+  background: #fed9c5;
+  color: #000;
+}
+
+.middle-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  height: 100%;
+  background: #3a96e1;
+}
+
+.floor-section {
+  width: 100%;
+  height: 4rem;
+  background: #005000;
+}
+
+.character-container {
+  position: relative;
+}
+
+.character-container #bvcovia {
+  height: 200px;
+  cursor: pointer;
+  -webkit-transform: translateY(0.2rem);
+          transform: translateY(0.2rem);
+}
+
+.character-container span {
+  display: none;
+  position: absolute;
+  top: -3rem;
+  right: -3rem;
+  color: #005000;
+  font-weight: 700;
+  background: #ffffff;
+  padding: .5rem 1rem;
+  border-radius: 3rem;
+}
+
+.character-container span::before {
+  content: 'Yass! Am facut ';
+  color: #000;
+}
+
+.character-container span::after {
+  content: ' $';
+  color: #000;
+}
+
+#microphone {
+  width: 100px;
+  -webkit-transform: rotateY(180deg) translateY(0.3rem);
+          transform: rotateY(180deg) translateY(0.3rem);
+}
+
+#speaker {
+  width: 100px;
+}
+
+.persons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 5rem;
+}
+
+.persons .person {
+  -webkit-transform: translateY(0.3rem);
+          transform: translateY(0.3rem);
+}
+
+.persons .person .stickman {
+  width: 200px;
 }
 /*# sourceMappingURL=game.css.map */
