--- a/assets/styles/game.sass
+++ b/assets/styles/game.sass
@@ -25,6 +25,9 @@ body
 .display-block
     display: block !important
 
+.display-grid
+    display: grid !important    
+
 // actual styling
 body
     background: $white
@@ -37,6 +40,22 @@ body
     height: 100vh
     background: rgba(0, 0, 0, .4)
     z-index: 999
+
+.concertUI
+    display: none
+    place-items: center
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    text-align: center
+    background: $white
+    padding: 4rem
+    font-size: 5rem
+    font-weight: 700
+    z-index: 10001
+    user-select: none
 
 .shopUI
     display: none
@@ -154,13 +173,28 @@ body
         display: flex
         gap: 1rem
         .concert
+            position: relative
             font-weight: 700
             padding: .5rem 2rem
-            background: $grey
-            color: lighten($grey, 50%)
+            background: darken($brown, 30%)
+            color: $white
             cursor: not-allowed
             user-select: none
             border-radius: .5rem
+            &:hover
+                .concert__info
+                    display: block
+            .concert__info
+                display: none
+                position: absolute
+                left: 0
+                bottom: -5.5rem
+                padding: .5rem 1rem
+                background: $white
+                color: $black
+                border-radius: .5rem
+                .concert__info-number
+                    color: $brown
 
         .buttons
             display: flex
