--- a/assets/styles/game.sass
+++ b/assets/styles/game.sass
@@ -29,289 +29,40 @@ body
     display: grid !important    
 
 // actual styling
-body
-    background: $white
-    overflow: hidden
-
-.backdrop
-    display: none
-    position: absolute
-    width: 100%
-    height: 100vh
-    background: rgba(0, 0, 0, .4)
-    z-index: 999
-
-.concertUI
-    display: none
-    place-items: center
-    position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
-    text-align: center
-    background: $white
-    padding: 4rem
-    font-size: 5rem
-    font-weight: 700
-    z-index: 10001
-    user-select: none
-
-.shopUI
-    display: none
-    position: absolute
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
-    width: 70%
-    height: 70vh
-    max-width: 600px
-    background: $white
-    z-index: 1001
-    border-radius: 1rem
-    h2
-        text-align: center
-        padding: .5rem 0
-        font-size: 2rem
-    .options
-        display: flex
-        flex-direction: column
-        align-items: center
-        justify-content: center
-        gap: 2rem
-        // justify-content: space-evenly
-        padding: 2rem
-        height: 100%
-        user-select: none
-        cursor: default
-        .option
-            display: flex
-            align-items: center
-            gap: 1rem
-            font-weight: 700
-            padding-bottom: .2rem
-            border-bottom: 2px solid $black
-            .levels
-                display: flex
-                align-items: center
-                font-size: 1.15rem
-                .min-level
-                    &::after
-                        content: '/'
-            button
-                cursor: pointer
-                font-weight: 700
-                padding: .5rem 1rem
-                background: $green
-                color: $white
-                border: none
-                border-radius: .5rem
-                &:focus
-                    outline: none
-                &::after
-                    content: '$'
-
-.statsUI
-    display: none
-    position: absolute
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
-    width: 70%
-    height: 70vh
-    max-width: 600px
-    background: $white
-    z-index: 1001
-    border-radius: 1rem
-    h2
-        text-align: center
-        padding: .5rem 0
-        font-size: 2rem
-    .stats
-        display: flex
-        flex-direction: column
-        align-items: center
-        justify-content: center
-        height: 100%
-        gap: 2rem
+header
+    background: $black
+    padding: 1rem 2rem
+    a
+        text-decoration: none
+        color: $white
         font-weight: 700
-        span
-            font-size: 1.15rem
-            color: $brown
+        font-size: 1.25rem
 
+main
+    height: 900px
 
-.content-game
+footer
     display: flex
     flex-direction: column
-    width: 100%
-    height: 100vh
-
-.upper-section
-    display: flex
-    justify-content: space-between
-    align-items: center
-    padding: 1rem 2rem
-    background: $brown
-    .upper-section__left
-        display: flex
-        align-items: center
-        gap: 2rem
-        .currency
-            font-weight: 700
-            font-size: 2rem
-            color: lighten($green, 25%)
-            .money
-                font-size: 1.75rem
-        .fame
-            font-weight: 700
-            font-size: 1.5rem
-            &::before
-                content: 'Fame: '
-                font-size: 2rem
-
-    .upper-section__right
-        display: flex
-        gap: 1rem
-        .concert
-            position: relative
-            font-weight: 700
-            padding: .5rem 2rem
-            background: darken($brown, 30%)
-            color: $white
-            cursor: not-allowed
-            user-select: none
-            border-radius: .5rem
-            &:hover
-                .concert__info
-                    display: block
-            .concert__info
-                display: none
-                position: absolute
-                left: 0
-                bottom: -5.5rem
-                padding: .5rem 1rem
-                background: $white
-                color: $black
-                border-radius: .5rem
-                .concert__info-number
-                    color: $brown
-
-        .buttons
-            display: flex
-            gap: 1rem
-            button
-                font-weight: 700
-                padding: .5rem 1rem
-                color: $white
-                border: none
-                border-radius: .5rem
-                cursor: pointer
-                &:focus
-                    outline: none
-            #shop-button
-                background: $green
-            #stats-button
-                background: lighten($brown, 50%)
-                color: $black
-
-.middle-section
-    display: flex
-    align-items: flex-end
-    height: 100%
-    background: $blue
-
-.floor-section
-    width: 100%
-    height: 4rem
-    background: $green
-
-.character-container    
-    position: relative
-    #bvcovia
-        height: 200px
-        cursor: pointer
-        transform: translateY(.2rem)
-    span
-        display: none
-        position: absolute
-        top: -3rem
-        right: -3rem
-        color: $green
+    text-align: center
+    background: $black
+    color: white
+    padding: 2rem
+    font-size: 1.15rem
+    font-weight: 300
+    gap: 2rem
+    a
         font-weight: 700
-        background: $white
-        padding: .5rem 1rem
-        border-radius: 3rem
-        &::before 
-            content: 'Yass! Am facut '
-            color: $black
-        &::after
-            content: ' $'   
-            color: $black
+        color: $grey
+        text-decoration: none
+    ul
+        list-style: none
+        li:first-of-type
+            font-weight: 700
 
-
-#microphone
-    width: 100px
-    transform: rotateY(180deg) translateY(.3rem)
-
-#speaker
-    width: 100px
-
-.persons
-    display: flex
-    margin-left: 5rem
-    .person
-        transform: translateY(.3rem)
-        .stickman
-            width: 200px
-
-@media ( max-width: 750px )
+@media screen and ( min-width:800px )
     body
-        .content-game
-            .upper-section
-                .upper-section__left
-                    .currency
-                        font-size: 1.25rem
-                        .money
-                            font-size: 1rem
-                    .fame
-                        font-size: 1rem
-                        &::before
-                            font-size: 1.25rem
-                .upper-section__right
-                    .concert
-                        font-weight: 300
-                        padding: .25rem .5rem
-                    .buttons
-                        gap: .5rem
-                        .button
-                            font-weight: 300
-                            padding: .25rem .5rem
-        .shopUI
-            .options
-                justify-content: initial
-                padding: 0
-                gap: 1rem
-        .statsUI
-            .stats
-                justify-content: initial
-                gap: .5rem
-        #speaker
-            width: 50px
-        .character-container
-            #bvcovia
-                height: 100px
-        #microphone
-            width: 75px
-        .persons
-            margin-left: 1rem
-            .person
-                .stickman
-                    width: 100px
-                
-@media ( max-width: 600px )
-    body
-        .content-game
-            .upper-section
-                .upper-section__left
-                    flex-direction: column
-                    gap: 0
+        footer
+            flex-direction: row
+            justify-content: space-evenly
+            align-items: center
