--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -13,107 +14,80 @@ body {
           box-sizing: border-box;
 }
 
-.show {
-  opacity: 1 !important;
+html {
+  scroll-behavior: smooth;
 }
 
-body {
-  background: #000;
+.display-block {
+  display: block !important;
+}
+
+.display-flex {
+  display: -webkit-box   !important;
+  display: -ms-flexbox   !important;
+  display: flex   !important;
+}
+
+.backdrop {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
 }
 
 header {
-  text-align: right;
-  padding: 1rem 3rem;
-}
-
-header #gameLink {
-  position: relative;
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 1.5rem;
-  font-weight: 700;
-  -webkit-tap-highlight-color: transparent;
-}
-
-header #gameLink::after {
-  content: '>';
-  position: absolute;
-  margin-left: .5rem;
-  -webkit-transition: all 200ms ease-out;
-  transition: all 200ms ease-out;
-}
-
-header #gameLink:hover {
-  text-decoration: underline;
-}
-
-header #gameLink:hover::after {
-  color: #656565;
-  -webkit-transform: translateX(0.8rem);
-          transform: translateX(0.8rem);
-}
-
-main .upper-section {
-  position: relative;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 
-main .upper-section::before {
-  content: ' ';
+header .navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+  background: #000;
+}
+
+header .navbar #home {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 1.25rem;
+  text-decoration: none;
+}
+
+header .navbar .links {
   position: absolute;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 3rem;
   top: 0;
-  width: 100%;
-  height: 50px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#000), to(transparent));
-  background: linear-gradient(to bottom, #000, transparent);
-}
-
-main .upper-section::after {
-  content: ' ';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 200px;
-  background: -webkit-gradient(linear, left bottom, left top, from(#000), to(transparent));
-  background: linear-gradient(to top, #000, transparent);
-}
-
-main .upper-section #background {
-  width: 100%;
+  right: 0;
   height: 100%;
-}
-
-main .upper-section #skull {
-  position: absolute;
-  width: 70%;
-  max-width: 400px;
-  top: 40%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-main .content-section {
-  position: relative;
-  top: 2rem;
-  padding: 2rem 0;
-  width: 100%;
-}
-
-main .content-section::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  height: 100%;
-  width: .5rem;
+  padding: 3rem 5rem;
   background: #ffffff;
-  border-radius: 1rem;
+  list-style: none;
+  z-index: 10000;
 }
 
-main .content-section .cards {
+header .navbar .links li a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 700;
+  font-size: 1.15rem;
+}
+
+header .burger-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,49 +95,85 @@ main .content-section .cards {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 2rem;
-  margin: auto;
-  margin-top: 2rem;
-  padding: 0 1rem;
-  max-width: 853px;
-  color: #000;
-}
-
-main .content-section .cards .card {
-  position: relative;
-  width: 40%;
-  max-width: 350px;
-  background: #ffffff;
-  padding: .5rem;
-  border-radius: .5rem;
-  opacity: 0;
-  -webkit-transition: opacity 350ms linear;
-  transition: opacity 350ms linear;
-}
-
-main .content-section .cards .card-left {
-  margin-right: 100%;
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
-}
-
-main .content-section .cards .card-left .circle {
-  position: absolute;
-  top: 50%;
+  gap: .3rem;
   width: 1.5rem;
-  height: 1.5rem;
-  background: black;
-  border: 3px solid #ffffff;
-  border-radius: 50%;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  cursor: pointer;
 }
 
-main .content-section .cards .card-right {
-  margin-left: 100%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+header .burger-menu span {
+  width: 100%;
+  height: 2px;
+  background: #ffffff;
+}
+
+header .burger-menu span:nth-of-type(2) {
+  width: 75%;
+}
+
+header .burger-menu span:nth-of-type(3) {
+  width: 50%;
+}
+
+header .theater {
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+  background: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+header .theater::before {
+  content: '';
+  position: absolute;
+  top: -1px;
+  width: 100%;
+  height: 4rem;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #000), color-stop(70%, transparent));
+  background: linear-gradient(to bottom, #000 10%, transparent 70%);
+  z-index: 1000;
+}
+
+header .theater img {
+  position: absolute;
+  width: 70%;
+  max-width: 300px;
+}
+
+main section {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  width: 100%;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+#section1 {
+  background: red;
+}
+
+#section2 {
+  background: blue;
+}
+
+#section3 {
+  background: green;
+}
+
+#section4 {
+  background: pink;
+}
+
+#section5 {
+  background: brown;
 }
 
 footer {
@@ -174,10 +184,10 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 6rem;
   text-align: center;
+  background: #000;
   color: white;
-  padding: 1rem;
+  padding: 2rem;
   font-size: 1.15rem;
   font-weight: 300;
   gap: 2rem;
@@ -198,15 +208,7 @@ footer ul li:first-of-type {
 }
 
 @media screen and (min-width: 800px) {
-  body main .upper-section #skull {
-    width: 50%;
-    max-width: 500px;
-  }
-  body main .content-section {
-    top: 4rem;
-  }
   body footer {
-    margin-top: 12rem;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -217,6 +219,34 @@ footer ul li:first-of-type {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+
+@media (min-width: 1000px) {
+  body header .navbar {
+    padding: 2rem;
+  }
+  body header .navbar .links {
+    position: initial;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    background: #000;
+    padding: 0;
+  }
+  body header .navbar .links li a {
+    color: #ffffff;
+    font-size: 1.05rem;
+  }
+  body header .navbar .burger-menu {
+    display: none;
+  }
+  body header .theater img {
+    max-width: 400px;
   }
 }
 /*# sourceMappingURL=style.css.map */
